src/main/java/net/hasor/graphql/dsl/parser/GraphParser.java
/* GraphParser.java */
/* Generated By:JavaCC: Do not edit this line. GraphParser.java */
/*
 * Copyright 2008-2009 the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package net.hasor.graphql.dsl.parser;
import net.hasor.graphql.dsl.*;
import net.hasor.graphql.dsl.domain.EqType;

import java.io.ByteArrayInputStream;
import java.io.InputStream;
import java.util.HashMap;
import java.util.Map;
/**
 * GraphQL DSL Parser
 * @author zyc@hasor.net
 * @version : 2017-03-28
 */
public class GraphParser implements GraphParserConstants {
    private Map<String, QueryModel> queryMap = new HashMap<String, QueryModel>();
    private GraphParser() {
    }
    //
    public static QueryModel parserGraphQL(String queryString) throws ParseException {
        GraphParser parser = new GraphParser(new ByteArrayInputStream(queryString.getBytes()));
        return parser.grapthQL();
    }
    public static QueryModel parserGraphQL(InputStream inputStream, String encoding) throws ParseException {
        GraphParser parser = new GraphParser(inputStream, encoding);
        return parser.grapthQL();
    }
    //
    private Object buildValueToNull(Object builder, Object oriValue, GraphQLToType toType) throws ParseException {
        if (builder instanceof FieldBindingBuilder) {
            return ((FieldBindingBuilder) builder).withNull();
        }
        if (builder instanceof ParamBindingBuilder) {
            return ((ParamBindingBuilder) builder).withNull();
        }
        throw new ParseException("missing return statement in function");
    }
    private Object buildValueToBoolean(Object builder, Object oriValue, GraphQLToType toType) throws ParseException {
        if (builder instanceof FieldBindingBuilder) {
            return ((FieldBindingBuilder) builder).withBoolean((Boolean) oriValue);
        }
        if (builder instanceof ParamBindingBuilder) {
            return ((ParamBindingBuilder) builder).withBoolean((Boolean) oriValue);
        }
        throw new ParseException("missing return statement in function");
    }
    private Object buildValueToNumber(Object builder, Object oriValue, GraphQLToType toType) throws ParseException {
        if (builder instanceof FieldBindingBuilder) {
            return ((FieldBindingBuilder) builder).withNumber((Number) oriValue);
        }
        if (builder instanceof ParamBindingBuilder) {
            return ((ParamBindingBuilder) builder).withNumber((Number) oriValue);
        }
        throw new ParseException("missing return statement in function");
    }
    private Object buildValueToStrig(Object builder, Object oriValue, GraphQLToType toType) throws ParseException {
        if (builder instanceof FieldBindingBuilder) {
            return ((FieldBindingBuilder) builder).withString((String) oriValue);
        }
        if (builder instanceof ParamBindingBuilder) {
            return ((ParamBindingBuilder) builder).withString((String) oriValue);
        }
        throw new ParseException("missing return statement in function");
    }
    private Object buildValueToMapping(Object builder, Object oriValue, GraphQLToType toType) throws ParseException {
        if (builder instanceof FieldBindingBuilder) {
            return ((FieldBindingBuilder) builder).withMapping((String) oriValue);
        }
        if (builder instanceof ParamBindingBuilder) {
            return ((ParamBindingBuilder) builder).withParam((String) oriValue);
        }
        throw new ParseException("missing return statement in function");
    }
    private Object buildValueToQuery(Object builder, Object oriValue, GraphQLToType toType) throws ParseException {
        if (builder instanceof FieldBindingBuilder) {
            return ((FieldBindingBuilder) builder).withFragment((QueryModel) oriValue);
        }
        if (builder instanceof ParamBindingBuilder) {
            return ((ParamBindingBuilder) builder).withFragment((QueryModel) oriValue);
        }
        throw new ParseException("missing return statement in function");
    }
    // GrapthQL
    final public QueryModel grapthQL() throws ParseException {
        String tempName = null;
        BindingBuilder tempQuery = null;
        BindingBuilder rootQuery = null;
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case FRAGMENT: {
                ;
                break;
            }
            default:
                jj_la1[0] = jj_gen;
                break label_1;
            }
            jj_consume_token(FRAGMENT);
            tempName = name();
            jj_consume_token(ON);
            tempQuery = grapthQuery(tempName);
            queryMap.put(tempName, tempQuery.buildQuery());
        }
        rootQuery = grapthQuery(null);
        jj_consume_token(0);
        {
            if ("" != null)
                return rootQuery.buildQuery();
        }
        throw new Error("Missing return statement in function");
    }
    final public BindingBuilder grapthQuery(String queryName) throws ParseException {
        BindingBuilder builder = GraphQL.createQuery(queryName);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY:
        case NAME_LITERAL: {
            udf(builder);
            break;
        }
        default:
            jj_la1[1] = jj_gen;
            ;
        }
        queryBody(builder);
        {
            if ("" != null)
                return builder;
        }
        throw new Error("Missing return statement in function");
    }
    final public UDFBindingBuilder udf(Object builder) throws ParseException {
        String udfName = null;
        UDFBindingBuilder udfBuilder = null;
        ParamData udfParam = null;
        udfName = name();
        if (builder instanceof BindingBuilder) {
            udfBuilder = ((BindingBuilder) builder).byUDF(udfName);
        }
        if (builder instanceof FieldBindingBuilder) {
            udfBuilder = ((FieldBindingBuilder) builder).withUDF(udfName);
        }
        if (builder instanceof ParamBindingBuilder) {
            udfBuilder = ((ParamBindingBuilder) builder).withUDF(udfName);
        }
        jj_consume_token(OPAR);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY: {
            udfParam = queryParam();
            udfBuilder.addParam(udfParam.getGraphParam(), udfParam.getEqType());
            label_2:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case COMMA: {
                    ;
                    break;
                }
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
                }
                jj_consume_token(COMMA);
                udfParam = queryParam();
                udfBuilder.addParam(udfParam.getGraphParam(), udfParam.getEqType());
            }
            break;
        }
        default:
            jj_la1[3] = jj_gen;
            ;
        }
        jj_consume_token(CPAR);
        udfBuilder.asOriginal();
        {
            if ("" != null)
                return udfBuilder;
        }
        throw new Error("Missing return statement in function");
    }
    final public ParamData queryParam() throws ParseException {
        String paramName = null;
        Token paramEqToken = null;
        ParamBindingBuilder paramBuilder = null;
        Object graphParam = null;
        paramName = stringValue();
        paramEqToken = jj_consume_token(EQ);
        paramBuilder = GraphQL.createParam(paramName);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case OBRA:
        case OCBR:
        case TRUE:
        case FALSE:
        case NULL:
        case NUMBER_INTEGER:
        case NUMBER_DECIMAL:
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY:
        case NAME_LITERAL: {
            if (jj_2_1(2)) {
                graphParam = udf(paramBuilder);
                graphParam = ((UDFBindingBuilder) graphParam).asParam();
            } else {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case OBRA:
                case OCBR:
                case TRUE:
                case FALSE:
                case NULL:
                case NUMBER_INTEGER:
                case NUMBER_DECIMAL:
                case STRING_SINGLE_EMPTY:
                case STRING_DOUBLE_EMPTY:
                case STRING_SINGLE_NONEMPTY:
                case STRING_DOUBLE_NONEMPTY:
                case NAME_LITERAL: {
                    graphParam = value(paramName, paramBuilder, GraphQLToType.ToParam);
                    break;
                }
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
            }
            break;
        }
        default:
            jj_la1[5] = jj_gen;
            ;
        }
        if (graphParam == null && queryMap.containsKey(paramName)) {
            graphParam = null;/*paramBuilder.withParam(paramName);*/
        }
        if (graphParam == null && !queryMap.containsKey(paramName)) {
            graphParam = paramBuilder.withParam(paramName);
        }
        EqType eqType = EqType.paserType(paramEqToken.image);
        {
            if ("" != null)
                return new ParamData((GraphParam) graphParam, eqType);
        }
        throw new Error("Missing return statement in function");
    }
    final public Object value(String pName, Object builder, GraphQLToType toType) throws ParseException {
        Object result = null;
        if (jj_2_3(2)) {
            result = valueForBase(pName, builder, toType);
            {
                if ("" != null)
                    return result;
            }
        } else {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case OBRA:
            case OCBR:
            case STRING_SINGLE_EMPTY:
            case STRING_DOUBLE_EMPTY:
            case STRING_SINGLE_NONEMPTY:
            case STRING_DOUBLE_NONEMPTY:
            case NAME_LITERAL: {
                if (jj_2_2(2147483647)) {
                    result = grapthQuery(pName);
                    if (builder instanceof FieldBindingBuilder) {
                        result = ((BindingBuilder) result).asField();
                    }
                    if (builder instanceof ParamBindingBuilder) {
                        result = ((BindingBuilder) result).asParam();
                    }
                } else {
                    switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case NAME_LITERAL: {
                        result = keyString();
                        if (queryMap.containsKey(result)) {
                            result = buildValueToQuery(builder, queryMap.get(result), toType);
                        } else {
                            result = buildValueToMapping(builder, result, toType);
                        }
                        break;
                    }
                    default:
                        jj_la1[6] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                    }
                }
                {
                    if ("" != null)
                        return result;
                }
                break;
            }
            default:
                jj_la1[7] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
        }
        throw new Error("Missing return statement in function");
    }
    final public Object valueForBase(String pName, Object builder, GraphQLToType toType) throws ParseException {
        Object oriValue = null;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case NULL: {
            oriValue = nullValue();
            {
                if ("" != null)
                    return buildValueToNull(builder, oriValue, toType);
            }
            break;
        }
        case TRUE:
        case FALSE: {
            oriValue = booleanValue();
            {
                if ("" != null)
                    return buildValueToBoolean(builder, oriValue, toType);
            }
            break;
        }
        case NUMBER_INTEGER:
        case NUMBER_DECIMAL: {
            oriValue = numberValue();
            {
                if ("" != null)
                    return buildValueToNumber(builder, oriValue, toType);
            }
            break;
        }
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY: {
            oriValue = stringValue();
            {
                if ("" != null)
                    return buildValueToStrig(builder, oriValue, toType);
            }
            break;
        }
        default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }
    final public void queryBody(BindingBuilder builder) throws ParseException {
        if (jj_2_4(2)) {
            queryArrayListBody(builder);
        } else {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case OBRA: {
                queryArrayValueBody(builder);
                break;
            }
            case OCBR: {
                queryObjectBody(builder);
                break;
            }
            default:
                jj_la1[9] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
        }
    }
    final public void queryArrayListBody(BindingBuilder builder) throws ParseException {
        builder = builder.asListObject();
        jj_consume_token(OBRA);
        jj_consume_token(OCBR);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY: {
            queryFields(builder);
            break;
        }
        default:
            jj_la1[10] = jj_gen;
            ;
        }
        jj_consume_token(CCBR);
        jj_consume_token(CBRA);
    }
    final public void queryArrayValueBody(BindingBuilder builder) throws ParseException {
        builder = builder.asListValue();
        Object oriValue = null;
        jj_consume_token(OBRA);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case TRUE:
        case FALSE:
        case NULL:
        case NUMBER_INTEGER:
        case NUMBER_DECIMAL:
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY:
        case NAME_LITERAL: {
            if (jj_2_5(2)) {
                oriValue = valueForBase(null, builder, GraphQLToType.ToField);
                builder.addField((GraphField) oriValue);
            } else {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case NAME_LITERAL: {
                    oriValue = keyString();
                    GraphField field = GraphQL.createField((String) oriValue).withMapping((String) oriValue);
                    builder.addField(field);
                    break;
                }
                default:
                    jj_la1[11] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
            }
            break;
        }
        default:
            jj_la1[12] = jj_gen;
            ;
        }
        jj_consume_token(CBRA);
    }
    final public void queryObjectBody(BindingBuilder builder) throws ParseException {
        builder = builder.asObject();
        jj_consume_token(OCBR);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY: {
            queryFields(builder);
            break;
        }
        default:
            jj_la1[13] = jj_gen;
            ;
        }
        jj_consume_token(CCBR);
    }
    final public void queryFields(BindingBuilder builder) throws ParseException {
        GraphField graphField = null;
        graphField = queryField();
        builder.addField(graphField);
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case COMMA: {
                ;
                break;
            }
            default:
                jj_la1[14] = jj_gen;
                break label_3;
            }
            jj_consume_token(COMMA);
            graphField = queryField();
            builder.addField(graphField);
        }
    }
    final public GraphField queryField() throws ParseException {
        Object graphField = null;
        String fieldName = null;
        FieldBindingBuilder builder = null;
        fieldName = stringValue();
        builder = GraphQL.createField(fieldName);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case COLON: {
            jj_consume_token(COLON);
            graphField = value(fieldName, builder, GraphQLToType.ToField);
            break;
        }
        default:
            jj_la1[15] = jj_gen;
            ;
        }
        if (graphField == null) {
            graphField = builder.withMapping(fieldName);
        }
        {
            if ("" != null)
                return (GraphField) graphField;
        }
        throw new Error("Missing return statement in function");
    }
    final public String name() throws ParseException {
        String stringObj;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case NAME_LITERAL: {
            jj_consume_token(NAME_LITERAL);
            {
                if ("" != null)
                    return token.image;
            }
            break;
        }
        case STRING_SINGLE_EMPTY:
        case STRING_DOUBLE_EMPTY:
        case STRING_SINGLE_NONEMPTY:
        case STRING_DOUBLE_NONEMPTY: {
            stringObj = stringValue();
            {
                if ("" != null)
                    return stringObj;
            }
            break;
        }
        default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }
    final public String keyString() throws ParseException {
        jj_consume_token(NAME_LITERAL);
        {
            if ("" != null)
                return token.image;
        }
        throw new Error("Missing return statement in function");
    }
    final public String stringValue() throws ParseException {
        Token t = null;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case STRING_DOUBLE_EMPTY: {
            t = jj_consume_token(STRING_DOUBLE_EMPTY);
            break;
        }
        case STRING_DOUBLE_NONEMPTY: {
            t = jj_consume_token(STRING_DOUBLE_NONEMPTY);
            break;
        }
        case STRING_SINGLE_EMPTY: {
            t = jj_consume_token(STRING_SINGLE_EMPTY);
            break;
        }
        case STRING_SINGLE_NONEMPTY: {
            t = jj_consume_token(STRING_SINGLE_NONEMPTY);
            break;
        }
        default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        String image = t.image;
        {
            if ("" != null)
                return image.substring(1, image.length() - 1);
        }
        throw new Error("Missing return statement in function");
    }
    final public Object nullValue() throws ParseException {
        jj_consume_token(NULL);
        {
            if ("" != null)
                return null;
        }
        throw new Error("Missing return statement in function");
    }
    final public Boolean booleanValue() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case TRUE: {
            jj_consume_token(TRUE);
            {
                if ("" != null)
                    return Boolean.TRUE;
            }
            break;
        }
        case FALSE: {
            jj_consume_token(FALSE);
            {
                if ("" != null)
                    return Boolean.FALSE;
            }
            break;
        }
        default:
            jj_la1[18] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }
    final public Number numberValue() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
        case NUMBER_DECIMAL: {
            jj_consume_token(NUMBER_DECIMAL);
            {
                if ("" != null)
                    return new Double(token.image);
            }
            break;
        }
        case NUMBER_INTEGER: {
            jj_consume_token(NUMBER_INTEGER);
            {
                if ("" != null)
                    return new Long(token.image);
            }
            break;
        }
        default:
            jj_la1[19] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }
    private boolean jj_2_1(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_1();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(0, xla);
        }
    }
    private boolean jj_2_2(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_2();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(1, xla);
        }
    }
    private boolean jj_2_3(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_3();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(2, xla);
        }
    }
    private boolean jj_2_4(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_4();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(3, xla);
        }
    }
    private boolean jj_2_5(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_5();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(4, xla);
        }
    }
    private boolean jj_3R_12() {
        if (jj_3R_20())
            return true;
        return false;
    }
    private boolean jj_3R_11() {
        if (jj_3R_19())
            return true;
        return false;
    }
    private boolean jj_3R_6() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_11()) {
            jj_scanpos = xsp;
            if (jj_3R_12()) {
                jj_scanpos = xsp;
                if (jj_3R_13()) {
                    jj_scanpos = xsp;
                    if (jj_3R_14())
                        return true;
                }
            }
        }
        return false;
    }
    private boolean jj_3_2() {
        if (jj_3R_5())
            return true;
        return false;
    }
    private boolean jj_3R_22() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_scan_token(29)) {
            jj_scanpos = xsp;
            if (jj_scan_token(33)) {
                jj_scanpos = xsp;
                if (jj_scan_token(28)) {
                    jj_scanpos = xsp;
                    if (jj_scan_token(32))
                        return true;
                }
            }
        }
        return false;
    }
    private boolean jj_3R_46() {
        if (jj_3R_41())
            return true;
        return false;
    }
    private boolean jj_3R_41() {
        if (jj_scan_token(NAME_LITERAL))
            return true;
        return false;
    }
    private boolean jj_3R_16() {
        if (jj_3R_22())
            return true;
        return false;
    }
    private boolean jj_3R_45() {
        if (jj_3R_5())
            return true;
        return false;
    }
    private boolean jj_3R_44() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_45()) {
            jj_scanpos = xsp;
            if (jj_3R_46())
                return true;
        }
        return false;
    }
    private boolean jj_3R_15() {
        if (jj_scan_token(NAME_LITERAL))
            return true;
        return false;
    }
    private boolean jj_3R_8() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_15()) {
            jj_scanpos = xsp;
            if (jj_3R_16())
                return true;
        }
        return false;
    }
    private boolean jj_3R_42() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3_3()) {
            jj_scanpos = xsp;
            if (jj_3R_44())
                return true;
        }
        return false;
    }
    private boolean jj_3_3() {
        if (jj_3R_6())
            return true;
        return false;
    }
    private boolean jj_3R_43() {
        if (jj_scan_token(COLON))
            return true;
        if (jj_3R_42())
            return true;
        return false;
    }
    private boolean jj_3R_38() {
        if (jj_3R_42())
            return true;
        return false;
    }
    private boolean jj_3R_39() {
        if (jj_3R_22())
            return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_43())
            jj_scanpos = xsp;
        return false;
    }
    private boolean jj_3R_35() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3_1()) {
            jj_scanpos = xsp;
            if (jj_3R_38())
                return true;
        }
        return false;
    }
    private boolean jj_3_1() {
        if (jj_3R_4())
            return true;
        return false;
    }
    private boolean jj_3R_40() {
        if (jj_scan_token(COMMA))
            return true;
        if (jj_3R_39())
            return true;
        return false;
    }
    private boolean jj_3R_30() {
        if (jj_3R_22())
            return true;
        if (jj_scan_token(EQ))
            return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_35())
            jj_scanpos = xsp;
        return false;
    }
    private boolean jj_3R_34() {
        if (jj_3R_36())
            return true;
        return false;
    }
    private boolean jj_3R_36() {
        if (jj_3R_39())
            return true;
        Token xsp;
        while (true) {
            xsp = jj_scanpos;
            if (jj_3R_40()) {
                jj_scanpos = xsp;
                break;
            }
        }
        return false;
    }
    private boolean jj_3R_31() {
        if (jj_scan_token(COMMA))
            return true;
        if (jj_3R_30())
            return true;
        return false;
    }
    private boolean jj_3R_25() {
        if (jj_scan_token(OCBR))
            return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_34())
            jj_scanpos = xsp;
        if (jj_scan_token(CCBR))
            return true;
        return false;
    }
    private boolean jj_3R_37() {
        if (jj_3R_41())
            return true;
        return false;
    }
    private boolean jj_3R_23() {
        if (jj_3R_30())
            return true;
        Token xsp;
        while (true) {
            xsp = jj_scanpos;
            if (jj_3R_31()) {
                jj_scanpos = xsp;
                break;
            }
        }
        return false;
    }
    private boolean jj_3R_29() {
        if (jj_scan_token(NUMBER_INTEGER))
            return true;
        return false;
    }
    private boolean jj_3_5() {
        if (jj_3R_6())
            return true;
        return false;
    }
    private boolean jj_3R_33() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3_5()) {
            jj_scanpos = xsp;
            if (jj_3R_37())
                return true;
        }
        return false;
    }
    private boolean jj_3R_32() {
        if (jj_3R_36())
            return true;
        return false;
    }
    private boolean jj_3R_21() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_28()) {
            jj_scanpos = xsp;
            if (jj_3R_29())
                return true;
        }
        return false;
    }
    private boolean jj_3R_28() {
        if (jj_scan_token(NUMBER_DECIMAL))
            return true;
        return false;
    }
    private boolean jj_3R_4() {
        if (jj_3R_8())
            return true;
        if (jj_scan_token(OPAR))
            return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_23())
            jj_scanpos = xsp;
        if (jj_scan_token(CPAR))
            return true;
        return false;
    }
    private boolean jj_3R_24() {
        if (jj_scan_token(OBRA))
            return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_33())
            jj_scanpos = xsp;
        if (jj_scan_token(CBRA))
            return true;
        return false;
    }
    private boolean jj_3R_27() {
        if (jj_scan_token(FALSE))
            return true;
        return false;
    }
    private boolean jj_3R_9() {
        if (jj_3R_4())
            return true;
        return false;
    }
    private boolean jj_3R_7() {
        if (jj_scan_token(OBRA))
            return true;
        if (jj_scan_token(OCBR))
            return true;
        Token xsp;
        xsp = jj_scanpos;
